--- a/msc/src/main/resources/application.properties
+++ b/msc/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+
+# view resolver
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 # database
 
 spring.datasource.username=root
@@ -7,3 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mscgifts
 
 server.port=8069
+
+
