--- a/msc/src/main/resources/application.properties
+++ b/msc/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
 # view resolver
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix: /WEB-INF/jsps/
+spring.mvc.view.suffix: .jsp
 # database
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mscgifts
