--- a/MSC-Gift/src/main/resources/application.properties
+++ b/MSC-Gift/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/newmscgiftsss
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
