--- a/MSC-Gift/pom.xml
+++ b/MSC-Gift/pom.xml
@@ -48,7 +48,13 @@
 						<artifactId>spring-security-test</artifactId>
 						<scope>test</scope>
 					</dependency>
-					
+				
+					<dependency>
+					    <groupId>javax.servlet</groupId>
+					    <artifactId>jstl</artifactId>
+					    <version>1.2</version>
+					</dependency>
+
 					<dependency>
 			            <groupId>org.springframework.boot</groupId>
 			            <artifactId>spring-boot-starter-mail</artifactId>
