--- a/MSC-Gift/src/main/resources/application.properties
+++ b/MSC-Gift/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 
-
 # view resolver
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
@@ -18,3 +17,6 @@ spring.mvc.view.suffix=.jsp
 
 
 
+
+#Credential to save the product image
+file.upload.path=D:\MSC Gift Online Shop\Ecommerce-gift-store-repo\MSC-Gift\src\main\webapp\resources\productImage
