category not working

--- a/MSC-Gift/src/main/resources/application.properties
+++ b/MSC-Gift/src/main/resources/application.properties
@@ -19,4 +19,4 @@ spring.mvc.view.suffix=.jsp
 
 
 #Credential to save the product image
-file.upload.path=D:\MSC Gift Online Shop\Ecommerce-gift-store-repo\MSC-Gift\src\main\webapp\resources\productImage
+file.upload.path=D:\\MSC-Gift-Online-Shop\\Ecommerce-gift-store-repo\\MSC-Gift\\src\\main\\webapp\\resources\\productImage\\
