--- a/MSC-Gift/pom.xml
+++ b/MSC-Gift/pom.xml
@@ -18,6 +18,12 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		
+		
+		
+		
+		
+		
 				    <dependency>
 				        <groupId>org.springframework.boot</groupId>
 				        <artifactId>spring-boot-starter-validation</artifactId>
@@ -66,7 +72,7 @@
 			<dependency>
 				<groupId>org.apache.tomcat.embed</groupId>
 				<artifactId>tomcat-embed-jasper</artifactId>
-				<scope>provided</scope>
+				<!--<scope>provided</scope>-->
 			</dependency>	
 			
 			<dependency>
