--- a/MSC-Gift/pom.xml
+++ b/MSC-Gift/pom.xml
@@ -30,8 +30,16 @@
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-starter-web</artifactId>
 					</dependency>
-			
 					<dependency>
+		               <groupId>org.springframework.boot</groupId>
+		               <artifactId>spring-boot-starter-data-jpa</artifactId>
+		             </dependency>
+		             <dependency>
+						<groupId>com.mysql</groupId>
+						<artifactId>mysql-connector-j</artifactId>
+						<scope>runtime</scope>
+		             </dependency>
+			         <dependency>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-devtools</artifactId>
 						<scope>runtime</scope>
@@ -52,34 +60,43 @@
 						<artifactId>spring-security-test</artifactId>
 						<scope>test</scope>
 					</dependency>
-				
-					<dependency>
-					    <groupId>javax.servlet</groupId>
-					    <artifactId>jstl</artifactId>
-					    <version>1.2</version>
-					</dependency>
-
-					<dependency>
+				    <dependency>
 			            <groupId>org.springframework.boot</groupId>
 			            <artifactId>spring-boot-starter-mail</artifactId>
 		            </dependency>
-			<dependency>
-				<groupId>org.apache.tomcat.embed</groupId>
-				<artifactId>tomcat-embed-jasper</artifactId>
-				<!--<scope>provided</scope>-->
-			</dependency>	
-			
-			<dependency>
-               <groupId>org.springframework.boot</groupId>
-               <artifactId>spring-boot-starter-data-jpa</artifactId>
-             </dependency>
-             
-		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-			
+					<dependency>
+						<groupId>jakarta.platform</groupId>
+						<artifactId>jakarta.jakartaee-api</artifactId>
+						<version>9.1.0</version>
+						<scope>provided</scope>
+					</dependency>
+					<dependency>
+						<groupId>jakarta.servlet.jsp.jstl</groupId>
+						<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>org.glassfish.web</groupId>
+						<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+						<!--<version>3.0.0</version>-->
+					</dependency>
+					<dependency>
+						<groupId>jakarta.servlet.jsp.jstl</groupId>
+						<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>jakarta.servlet</groupId>
+						<artifactId>jakarta.servlet-api</artifactId>
+						<scope>provided</scope>
+					</dependency>
+	                <dependency>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring-context-support</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.tomcat.embed</groupId>
+						<artifactId>tomcat-embed-jasper</artifactId>
+						<scope>provided</scope>
+					</dependency>	
 						
 	</dependencies>
 
